
2010-11-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16598: Login via OpenID is impossible (Thanks to Henrik Ziegenhain)
	* Fixed bug #16581: Make jsFooterInline & jsFooterLibs available to render-preProcess hook (Thanks to Morton Jonuschat)
	* Fixed bug #16623: Fix Tab styling (Thanks to Tomas Norre Mikkelsen)

2010-11-29  Ernesto Baschny  <ernst@cron-it.de>

	* Follow-up to #15998: Fixed CGL issue with naming and added exception codes

2010-11-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #16583: Localization overview has no color-coded status anymore

2010-11-29  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Added last_synched_target file since the system extension "version" is now maintained in an external repository
	  (see https://svn.typo3.org/TYPO3v4/CoreProjects/workspaces/version/)

2010-11-29  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed bug #16597: TCA tree: Adapt Signature of own select renderMode tree to match the signature other select-modes
	* Fixed bug #16600: TCA tree: Move the ACL-Checks out from Data-Provider and use the information from tceFroms
	* Follow-up to bug #16600: TCA tree: Move the ACL-Checks out from Data-Provider and use the information from tceFroms (added missing class)
	* Fixed bug #16553: TCA tree does not work for relation-fields without TCA Definition.
	* Cleanup #16553: TCA tree has redundant code passages
	* Fixed bug #16276: TCAtree should respect maxItems = 1
	* Fixed bug #16605: TCA tree: sorting is not working

2010-11-29  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16417: Field module is not rendered for sysfolders (Thanks to Georg Ringer)
	* Fixed bug #16559: Ugly errors in install tool (Thanks to Kevin Walter)

2010-11-28  Steffen Gebert  <steffen@steffen-gebert.de>

	* Follow-up to #15644: Replace magic numbers for shortcut_mode with class constants in tslib_fe

2010-11-28  Steffen Ritter  <typo3@steffen-ritter.net>
